--- a/src/components/Meals/MealsList.module.scss
+++ b/src/components/Meals/MealsList.module.scss
@@ -1,3 +1,3 @@
 .meals {
-  @apply w-2/3 mx-auto my-10 animate-mealsAppear;
+  @apply w-11/12 my-5 md:w-4/5 lg:w-5/6 mx-auto md:my-10 animate-mealsAppear;
 }
