--- a/src/components/Meals/MealsSummary.module.scss
+++ b/src/components/Meals/MealsSummary.module.scss
@@ -1,5 +1,5 @@
 .summary {
-  @apply bg-neutral-900 relative w-1/2 text-center shadow-2xl z-10 mx-auto -mt-24 text-white rounded-xl px-4 py-5;
+  @apply bg-neutral-900 relative w-3/4 md:w-2/3 text-center shadow-2xl z-10 mx-auto -mt-24 text-white rounded-xl px-4 py-5;
 
   h2 {
     @apply font-bold text-3xl mb-4;
